style.css
/* ... */
.price-card {
  color: #e8533f;
  font-size: 18px;
  font-family: Mulish;
  font-weight: 700;
  line-height: 28px;
  word-wrap: break-word;
}
.course-card-img {
  width: 260px;
  height: 260px;
  object-fit: cover;
  border-radius: 0.625rem;
}
.course-title {
  color: #4c6ffa;
  font-size: 18px;
  font-family: Mulish;
  font-weight: 700;
  line-height: 26px;
  word-wrap: break-word;
  margin-bottom: 15px;
}

.card-body {
  padding-top: 0 !important;
}

.course-title {
  margin-top: 0;
}

.course-detail {
  color: #32343d;
  font-size: 16px;
  font-family: Mulish;
  font-weight: 400;
  line-height: 24px;
  word-wrap: break-word;
  margin-bottom: 10px;
}

.course-attribute {
  color: #32343d;
  font-size: 16px;
  font-family: Mulish;
  font-weight: 700;
  line-height: 24px;
  word-wrap: break-word;
  margin-left: px;
}
.img-edu-news {
  border-radius: 10px;
  height: 200px;
  width: 100%;
  object-fit: cover;
}
.edu-new-info {
  margin-top: 10px;
  color: white;
  font-size: 16px;
  font-family: Mulish;
  font-weight: 700;
  line-height: 24px;
  word-wrap: break-word;
}

.course-card {
  border-radius: 0.625rem;
  padding: 15px;
  height: 290px;
}
.edu-text-dis {
  color: white;
  font-size: 16px;
  font-family: Mulish;
  font-weight: 600;
  word-wrap: break-word;
}

.services-news-bg {
  background-color: #faf5f3;
}

.bg-price {
  background-color: #fff0f0;
}
.news-img {
  max-width: 100%;
  height: 200px;
  object-fit: cover;
  border-radius: 10px;
}

.news-day {
  color: #4c6ffa;
  font-size: 14px;
  font-family: Mulish;
  font-weight: 400;
  line-height: 22px;
  word-wrap: break-word;
}

.news-content {
  color: #32343d;
  font-size: 16px;
  font-family: Mulish;
  font-weight: 700;
  line-height: 24px;
  word-wrap: break-word;
}
.separk-title{
color: #4C6FFA;
 font-size: 24px;
 font-family: Mulish;
 font-weight: 700;
 text-transform: uppercase;
 word-wrap: break-word
}

.se-park-img{
    height: 50px;
    margin-right: 49px;
    width:160px;
}

